...
        bar.translatesAutoresizingMaskIntoConstraints = false
        return bar
    }()
    
    private let webView: WKWebView = {
        let web = WKWebView()
        web.accessibilityIdentifier = "UnsplashWebView"
        web.translatesAutoresizingMaskIntoConstraints = false
        return web
    }()
    
    private var estimatedProgressObservation: NSKeyValueObservation?
    
...
